--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
             android:layout_width="wrap_content"
             android:layout_height="?actionBarSize">
             <TextView
+                android:layout_alignParentBottom="true"
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:minHeight="?actionBarSize"
+                android:textAlignment="center"
                 android:padding="@dimen/appbar_padding"
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
@@ -27,14 +27,13 @@
             <ImageButton
                 android:id="@+id/btnSettings"
                 android:layout_alignParentRight="true"
-                android:layout_gravity="center"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:maxWidth="?actionBarSize"
                 android:maxHeight="?actionBarSize"
-                android:layout_margin="10dp"
+                android:layout_marginRight="10dp"
                 android:backgroundTint="@color/white"
-                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
                 android:background="@drawable/settings"
                 />
 
@@ -55,7 +54,7 @@
         </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
