--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -53,6 +53,7 @@
                 android:id="@+id/ivRecipe"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:scaleType="centerCrop"
                 android:background="@color/grey" />
             <LinearLayout
                 android:layout_width="match_parent"
